<resources>
    <string name="app_name">InventoryApp</string>
    <string name="action_settings">Settings</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <string name="action_delete_all_entries">Delete All Books</string>

    <string name="editor_activity_title_new_pet">Add a Book</string>

    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="category_book_type">Book Type:</string>
    <string name="category_book_details">Book Details:</string>

    <string name="product_name">Book Name</string>

    <string name="product_price">Price</string>
    <string name="product_quantity">Quantity</string>
    <string name="supplier_name">Supplier Name</string>

    <string name="supplier_contact">Supplier Phone No.</string>
    <string name="product_name2">Book Name: </string>

    <string name="product_price2">Price: </string>
    <string name="product_quantity2">Quantity: </string>

    <string name="supplier_name2">Supplier Name: </string>
    <string name="supplier_contact2">Supplier Phone No.: </string>
    <string name="errorMessage">Error with saving book.</string>
    <string name="savingMessage">Book saved with rowID </string>
    <string name="displayMessage1">The books table contains </string>
    <string name="displayMessage2"> books.</string>
    <string name="book_type_1">Drama</string>
    <string name="book_type_2">Science Fiction</string>
    <string name="book_type_3">Romance</string>
    <string name="book_type_4">Action/Adventure</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="currency"> $</string>
    <string name="deleted_all_products_message">rows deleted from product table</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="phone">Phone</string>
    <string name="delete_all_dialog_msg">Delete All these Products ?</string>
    <string name="delete_product_successful">Product deleted</string>
    <string name="delete_product_failed">Error with deleting Product</string>
    <string name="delete_dialog_msg">Delete this Product?</string>
    <string name="quantity_changed_msg">Quantity was changed</string>
    <string name="quantity_finished_msg">Sorry Product is Out of Stock :(</string>
    <string name="quantity_changed_msg2">Quantity has been changed</string>
    <string name="insert_failed">Error with saving product</string>
    <string name="insert_successful">Product saved successfully</string>
    <string name="update_failed">Error with updating product</string>
    <string name="update_successful">Product updated successfully</string>
    <string name="Sry_msg">Sorry, product is Out of Stock! :( , buy another Product</string>
    <string name="Edit">editIcon</string>
    <string name="Cart">cartIcon</string>
    <string name="emptyText">Tap the add button below to add some data!</string>

    <string name="productNameError"> Valid Product name is required</string>
    <string name="productPriceError"> Valid Price Entry is required</string>
    <string name="productQuantityError"> Valid Product quantity is required</string>
    <string name="productSuppNameError"> Valid Supplier Name is required</string>
    <string name="productSuppPhoneNoError">Valid Supplier Phone No. is required</string>




</resources>
