<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    android:theme="@style/Theme.AppCompat.Light"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_book_type"
            android:textColor="@color/colorText"
            android:textSize="@dimen/textSize"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/bookType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/editorLayoutTextViewLeft"
            android:layout_marginStart="@dimen/editorLayoutTextViewLeft">

        </TextView>
    </LinearLayout>

    <!-- Input fields -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/editorLayoutTextViewTop"
        android:text="@string/category_book_details"
        android:textColor="@color/colorText"
        android:textSize="@dimen/textSize"
        android:textStyle="bold">

    </TextView>

    <!-- Name field -->
    <EditText
        android:id="@+id/edit_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/product_name"
        android:inputType="textCapWords"
        android:textColor="@color/colorText" />

    <!-- Price field -->
    <EditText
        android:id="@+id/edit_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/product_price"
        android:inputType="number"
        android:textColor="@color/colorText"/>

    <!-- Quantity field -->
    <EditText
        android:id="@+id/edit_product_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/product_quantity"
        android:inputType="number"
        android:textColor="@color/colorText"/>

    <!-- Supplier Name field -->
    <EditText
        android:id="@+id/edit_product_supplier_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/supplier_name"
        android:inputType="text"
        android:textColor="@color/colorText"/>

    <!-- Supplier Phone number field -->
    <EditText
        android:id="@+id/edit_product_supplier_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/supplier_contact"
        android:inputType="phone"
        android:textColor="@color/colorText"/>


</LinearLayout>