<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    android:theme="@style/Theme.AppCompat.Light"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_book_type"
            android:textColor="@color/colorText"
            android:textSize="@dimen/textSize"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/bookType2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/detailsLayoutComponentsMarginLeft"
            android:layout_marginStart="@dimen/detailsLayoutComponentsMarginLeft">

        </TextView>
    </LinearLayout>

    <!-- Input fields -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detailsLayoutComponentsMarginTop"
        android:text="@string/category_book_details"
        android:textColor="@color/colorText"
        android:textSize="@dimen/textSize"
        android:textStyle="bold">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detailsLayoutComponentsMarginTop"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/detailsLayoutTextViewWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            android:text="@string/product_name2"
            android:textColor="@color/colorText2"
            android:textSize="@dimen/textSize" />

        <!-- Name field -->
        <TextView
            android:id="@+id/product_name"
            style="@style/EditorFieldStyle"
            android:layout_gravity="center"
            android:textSize="@dimen/textSize2" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detailsLayoutComponentsMarginTop2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/detailsLayoutTextViewWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            android:text="@string/product_price2"
            android:textColor="@color/colorText2"
            android:textSize="@dimen/textSize" />
        <!-- Price field -->
        <TextView
            android:id="@+id/product_price"
            style="@style/EditorFieldStyle"
            android:layout_gravity="center"
            android:textSize="@dimen/textSize2"


            />
    </LinearLayout>

    <!-- Quantity field -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detailsLayoutComponentsMarginTop2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/detailsLayoutTextViewWidth"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/product_quantity2"
            android:textColor="@color/colorText2"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/product_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/textSize2" />

        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/add"
            android:textColor="@color/colorText"
            android:textSize="@dimen/textSize2"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sub_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/subtract"
            android:textColor="@color/colorText"
            android:textSize="@dimen/textSize2"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detailsLayoutComponentsMarginTop2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/detailsLayoutTextViewWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            android:text="@string/supplier_name2"
            android:textColor="@color/colorText2"
            android:textSize="@dimen/textSize" />


        <!-- Supplier Name field -->
        <TextView
            android:id="@+id/product_supplier_name"
            style="@style/EditorFieldStyle"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/detailsLayoutComponentsMarginTop2"
            android:textSize="@dimen/textSize2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detailsLayoutComponentsMarginTop2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/detailsLayoutTextViewWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            android:text="@string/supplier_contact2"
            android:textColor="@color/colorText2"
            android:textSize="@dimen/textSize" />


        <!-- Supplier Phone number field -->
        <TextView
            android:id="@+id/product_supplier_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/detailsLayoutComponentsMarginTop2"
            android:textSize="@dimen/textSize2" />

        <ImageView
            android:id="@+id/phone"
            android:layout_width="@dimen/callButtonWidth"
            android:layout_height="@dimen/callButtonHeight"
            android:layout_marginLeft="@dimen/callButtonMarginLeft"
            android:layout_marginStart="@dimen/callButtonMarginLeft"
            android:layout_marginTop="@dimen/callButtonMarginTop"
            android:contentDescription="@string/phone"
            android:src="@drawable/call" />

    </LinearLayout>


    <ImageView
        android:id="@+id/delete"
        android:layout_width="@dimen/deleteButtonWidth"
        android:layout_height="@dimen/deleteButtonHeight"
        android:layout_marginLeft="@dimen/deleteButtonMarginLeft"
        android:layout_marginStart="@dimen/deleteButtonMarginLeft"
        android:layout_marginTop="@dimen/deleteButtonMarginTop"
        android:contentDescription="@string/delete"
        android:src="@drawable/trash" />


</LinearLayout>